@@ -11,9 +11,10 @@ public class ExemplarSeletor {
 		public boolean temFiltro() {
 			boolean temFiltroPreenchido = false;
 			//TODO melhorar essas verificacoes
-			temFiltroPreenchido = (termoPesquisa != null && !termoPesquisa.isBlank())
-					|| !buscarPor.isBlank()
-					|| !ano.isBlank();
+
+			temFiltroPreenchido = (termoPesquisa != null && !termoPesquisa.trim().isEmpty())
+					|| !buscarPor.trim().isEmpty()
+					|| !ano.trim().isEmpty();
 			
 			return temFiltroPreenchido;
 		}
